Version 1.2.0 Unreleased
-------------------------------------------------------------
20 July 2007
+ Added alt tag to no image
+ Fixed clear image link
+ Updated file: javascript/clear_image/head.js

19 July 2007
+ Added missing "return true" to the install.php
+ Added upper limit on image dimension should a module have a high
  tolerance for its size.

18 July 2007
+ Subbed the current url for the # in the src for the folder onclick
  link. For some pain-in-my-ass reason, firefox loads the root
  regardless of the return false on the end.
+ javascript altered. Resampled image was using thumbnail image. I
  thought I had fixed that. Guess not. Also plugged in width and height
  just in case.
+ Updated files: javascript/pick_image/head.js

16 July 2007
+ Removed files: edit_embed.tpl

2 July 2007
+ Moved video types into video_types.php config file. Need to move
  filter detection into a config as well.
+ multimedia folder will be placed in files/multimedia/ not
  files/filecabinet/multimedia/
+ Each folder tab now checks the write status of each directory
  separately.
+ added extra multimedia type to icon check
+ Added install.php to create multimedia folder.
+ Updated files: conf/video_types.php

28 June 2007
+ added translation to tallied item count. also changed "items" to
  "images"
+ Folder now loads files in filename order.
+ Added checkbox that allows you to hide child images
+ Deleting a parent image makes all child images parents.
+ Changed wording on image linking to urls
+ Updated files: javascript/folder_contents/head.js,
                 javascript/pick_image/head.js
                 templates/image_folders.tpl, templates/style.css
                 


27 June 2007
+ File Cabinet's Image Manager no longer shows small thumbnail.
  Instead, it shows a full image set to the current dimension limits.
+ Cabinet - added error check
+ Image - getTag function now allows an "id" parameter that will be
          added to the image tag (i.e. id="css-id-name")