@@ -25,6 +25,11 @@ define('FC_THUMBNAIL_HEIGHT', 100);
 define('FC_MAX_MULTIMEDIA_POPUP_WIDTH', 1024);
 define('FC_MAX_MULTIMEDIA_POPUP_HEIGHT', 768);
 
+/**
+ * For image popups, this is the minumum dimension of the 
+ * popup window.
+ */
+define('FC_MIN_POPUP_SIZE', 400);
 
 /**
  * if true (the default) and a file already has a resized version,
